--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
 <body>
     <script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
+    <script src="https://threejs.org/examples/js/controls/OrbitControls.js"></script>
     <script type="text/javascript" src= "./lib/three.js"></script>
-    <script type="text/javascript" src= "./lib/OrbitControls.js"></script>
-    <script src="./main.js"></script>
+    <script type="module" src="./main.js"></script>
 
 
 
@@ -29,7 +29,7 @@
             <h1>Marvel Museum Walkthrough <br> with Three.js</h1>
             <div>
                 <p>Instructions:</p>
-                <p>Use W/A/S/D or Arrows to Move Around</p>
+                <p>Use W/A/S/D or Arrows to Move Around, Space and Shift to go Up and Down</p>
                 <p>Mouse to Control the Camera</p>
             </div>
             <div id="play_button">
