--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
                     <li>Use W/A/S/D or Arrows to Move Around</li>
                     <li>Use Space and Shift to go Up and Down</li>
                     <li>Use Mouse to Control the Camera</li>
+                    <li>Use L to Control the Lights</li>
                 </ul>
                 </div>
             </div>
             <div id="play_button">
                 <p>ENTER THE MUSEUM</p>
             </div>
-        </div> 
+        </div>          
       </div>
-
 </head>
 
 
