--- a/notas.html
+++ b/notas.html
@@ -1,28 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Notas</title>
+  <title>PresenTracker</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #f5f5f5;
-      padding: 20px;
+      background-image: url('./images/main3.jpg');
+      background-size: cover;
+      background-position: center;
+      background-attachment: fixed;
+      background-repeat: no-repeat;
     }
 
     .container {
       max-width: 800px;
       margin: 0 auto;
-      background-color: #fff;
+      background-color: rgba(255, 255, 255, 0.9);
       border-radius: 5px;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-      padding: 20px;
+      padding: 10px;
     }
 
     .header {
       display: flex;
       justify-content: space-between;
       align-items: center;
-      margin-bottom: 20px;
+
     }
 
     .back-button {
@@ -64,9 +67,8 @@
     }
 
     .overlay-text {
-      font-size: 24px;
+      font-size: 25px;
       font-weight: bold;
-      margin-bottom: 10px;
     }
 
     .pdf-container embed {
@@ -78,10 +80,10 @@
 <body>
   <div class="container">
     <div style="display: flex; justify-content: space-between; align-items: center;">
-      <a style="margin-left: 50px;" href="menu.html">
+      <a style="margin-left: 30px;" href="menu.html">
         <img src="./images/home.png" style="width: 20px; height: 20px;">
       </a>
-      <h1 style="margin-right: 215px;">Apresentação das notas</h1>
+      <h2 style="margin-right: 260px;">Apresentação das notas</h2>
     </div>
     <div class="pdf-container">
       <div class="pdf-overlay">
