--- a/avaliacao.html
+++ b/avaliacao.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Avaliação da Apresentação</title>
+  <title>PresenTracker</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #f5f5f5;
+      background-image: url('./images/main3.jpg');
+      background-size: cover;
+      background-position: center;
+      background-attachment: fixed;
+      background-repeat: no-repeat;
       padding: 20px;
     }
 
     .container {
       max-width: 600px;
       margin: 0 auto;
-      background-color: #fff;
+      margin-top: 0px;
+      background-color: rgba(255, 255, 255, 1);
       border-radius: 5px;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
       padding: 20px;
@@ -59,15 +64,17 @@
     }
 
     .observation-container textarea {
-      width: 100%;
-      height: 100px;
+      width: 99%;
+      height: 50px;
+      margin-right: 15px;
       margin-bottom: 20px;
     }
 
     .observation-container textarea.comments-field {
-      width: 100%;
-      height: 100px;
+      width: 99%;
+      height: 50px;
       margin-bottom: 20px;
+      margin-right: 15px;
       resize: none; /* Prevents resizing */
       text-align: center; /* Centers the content */
     }
@@ -77,12 +84,6 @@
       text-align: center;
     }
 
-    .text-center {
-     text-align: center;
-     align-content: center;
-     align-items: center;
-     justify-content: center;
-   }
 
 
     .button-container button {
@@ -122,6 +123,12 @@
      display: block;
    }
 
+   .center-text {
+    text-align: center; /* Centers the content horizontally */
+    display: flex;
+    align-items: center; /* Centers the content vertically */
+    justify-content: center; /* Centers the content horizontally */
+  }
 
 
   </style>
@@ -152,11 +159,11 @@
     </div><br>
     <div class="observation-container">
       <label for="observations" class="text-center">Observações e Comentários:</label><br><br>
-      <textarea id="observations" name="observations" class="comments-field"></textarea>
+      <textarea id="observations" name="observations" class="comments-field center-text"></textarea>
 
     </div>
     <div class="button-container">
-      <button id="submitButton" onclick="showPopup()" disabled>Avaliação Concluída</button>
+      <button id="submitButton" onclick="showPopup()" disabled>Avaliar</button>
     </div>
   </div>
 
